--- a/WEB/stylesheets/loginlarge.css
+++ b/WEB/stylesheets/loginlarge.css
@@ -1,3 +1,4 @@
+#error-container { display: none; position: absolute; top: 10%; width: 100%; height: auto; background-color: #f00; color: #fff; padding: 10px; text-align: center; border-radius: 25%; }
 #form-container { margin: auto; width: 70%; color: #fff; }
 input { display: block; width: 70%; margin: auto; margin-bottom: 10px; margin-top: 10px; font-size: 110%; border: none; background-color: #fff; -webkit-box-shadow: 0px 1px 3px #000; -moz-box-shadow: 0px 1px 3px #000; -ms-box-shadow: 0px 1px 3px #000; -o-box-shadow: 0px 1px 3px #000; box-shadow: 0px 1px 3px #000; padding: 10px; text-align: center; }
 #submit-button { width: 30%; margin: auto; margin-top: 20px; margin-bottom: 20px; background-color: #7af; color: #fff; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -ms-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; padding: 10px; font-size: 120%; border: none; border-radius: 7px; display: block; }
