--- a/WEB/stylesheets/readmessageslarge.css
+++ b/WEB/stylesheets/readmessageslarge.css
@@ -1,5 +1,5 @@
-#message-display { background-color: #fff; width: 70%; margin: auto; margin-top: 10px; margin-bottom: 10px; border-radius: 7px; color: #000; padding: 20px; }
+#message-display { background-color: #fff; width: 70%; margin: auto; margin-top: 10px; margin-bottom: 10px; border-radius: 7px; color: #000; padding: 20px; min-height: 200px; max-height: 500px;}
 #message-send { background-color: #7af; width: 100%; padding: 20px; border-radius: 7px; }
 #msg { border: none; border-radius: 7px; padding: 10px; width: 70%; margin: auto; margin-top: 10px; margin-bottom: 10px; background-color: #ddd; color: #7af; display: block; font-size: 120%; }
 #send-button { padding: 10px; border: none; border-radius: 7px; background-color: #ddd; color: #7af; text-align: center; display: block; width: 40%; margin: auto; margin-bottom: 10px; margin-top: 10px; position: relative; font-size: 120%; }
-#toast-container { display: block; background-color: #ddd; color: #7af; padding: 10px; border-radius: 7px; position: relative; bottom: 10%; left: 41%; font-size: 120%; text-align: center; width: 100px; }
+#toast-container { display: none; background-color: #ddd; color: #7af; padding: 10px; border-radius: 7px; position: relative; bottom: 10%; left: 41%; font-size: 120%; text-align: center; width: 100px; }
